# lda

./: BATCHING.md  Dockerfile  README.md  batch-inputs-2.bundle  example.py  experiment_plan.md  lda.py  model_reference.md  mywork.bundle  pyproject.toml  run_server.py  run_sleeper_experiment.py  server.py  start.sh  test_regression.py
.github/: CODEOWNERS
.github/workflows/: docker.yml
dev_scripts/: laptop_pull_bundle.sh  server_bundle.sh  startup.sh
experiment_results/: sleeper_experiment_2026_02_04.json
